	DR#412 	PR preprocessor/60570 	* directives.c (do_elif): Don't evaluate #elif conditionals 	when they don't need to be.

* gcc.dg/cpp/pr36320.c: Turn dg-error into dg-bogus.
	* gcc.dg/cpp/pr60570.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@220035 138bc75d-0d04-0410-961f-82ee72b054a4